--- a/app/src/main/res/layout-v26/activity_insert.xml
+++ b/app/src/main/res/layout-v26/activity_insert.xml
@@ -25,16 +25,16 @@
 
     <ImageButton
         android:id="@+id/other_Btn"
-        android:layout_width="168dp"
+        android:layout_width="163dp"
         android:layout_height="177dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="16dp"
         android:contentDescription="@string/otherbtn"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/plastic_Btn"
         app:layout_constraintTop_toTopOf="parent"
@@ -42,39 +42,39 @@
 
     <TextView
         android:id="@+id/howManyPlastic_Label"
-        android:layout_width="wrap_content"
+        android:layout_width="148dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/how_many_plastic_items"
         android:text="@string/how_many_plastic_items"
         android:textSize="12sp"
-        android:textStyle="bold"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/plasticItems_EditText"
         app:layout_constraintEnd_toEndOf="@+id/plasticItems_EditText"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/plasticItems_EditText"
+        app:layout_constraintStart_toStartOf="@+id/plastic_Btn"
         app:layout_constraintTop_toBottomOf="@+id/plastic_Btn"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/plasticItems_EditText"
-        android:layout_width="171dp"
+        android:layout_width="168dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginLeft="6dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/type_number_of_plastic_items_collected"
         android:inputType="number"
-        android:textSize="12sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/otherItems_EditText"
         app:layout_constraintEnd_toEndOf="@+id/plastic_Btn"
-        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/plastic_Btn"
-        app:layout_constraintTop_toBottomOf="@+id/otherItems_EditText"
-        tools:targetApi="o" />
+        app:layout_constraintTop_toBottomOf="@+id/otherItems_EditText" />
 
     <TextView
         android:id="@+id/plasticItem_Descrip_Label"
@@ -85,20 +85,17 @@
         android:contentDescription="@string/description_facultative"
         android:text="@string/description_facultative"
         android:textSize="12sp"
-        android:textStyle="bold"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/plasticItem_Descrip_EditText"
         app:layout_constraintEnd_toEndOf="@+id/plasticItem_Descrip_EditText"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/plasticItem_Descrip_EditText"
-        app:layout_constraintTop_toBottomOf="@+id/plasticItems_EditText"
-        app:layout_constraintVertical_bias="0.545" />
+        app:layout_constraintTop_toBottomOf="@+id/plasticItems_EditText" />
 
     <EditText
         android:id="@+id/plasticItem_Descrip_EditText"
         android:layout_width="168dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/insert_a_description_if_you_want"
@@ -107,11 +104,8 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/otherItems_Descrip_EditText"
         app:layout_constraintEnd_toEndOf="@+id/plasticItems_EditText"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/plasticItems_EditText"
-        app:layout_constraintTop_toBottomOf="@+id/otherItems_Descrip_EditText"
-        app:layout_constraintVertical_bias="0.448"
-        tools:targetApi="o" />
+        app:layout_constraintTop_toBottomOf="@+id/otherItems_Descrip_EditText" />
 
     <TextView
         android:id="@+id/howManyOther_Label"
@@ -122,7 +116,6 @@
         android:contentDescription="@string/how_many_other_garbage_items"
         android:text="@string/how_many_other_garbage_items"
         android:textSize="12sp"
-        android:textStyle="bold"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/otherItems_EditText"
         app:layout_constraintEnd_toEndOf="@+id/otherItems_EditText"
@@ -138,13 +131,11 @@
         android:ems="10"
         android:hint="@string/type_number_of_other_garbage_items_collected"
         android:inputType="number"
-        android:textSize="12sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/other_Btn"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/other_Btn"
-        app:layout_constraintTop_toBottomOf="@+id/other_Btn"
-        tools:targetApi="o" />
+        app:layout_constraintTop_toBottomOf="@+id/other_Btn" />
 
     <TextView
         android:id="@+id/otherItem_Descrip_Label"
@@ -155,7 +146,6 @@
         android:contentDescription="@string/description_facultative"
         android:text="@string/description_facultative"
         android:textSize="12sp"
-        android:textStyle="bold"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/otherItems_Descrip_EditText"
         app:layout_constraintEnd_toEndOf="@+id/otherItems_Descrip_EditText"
@@ -164,9 +154,9 @@
 
     <EditText
         android:id="@+id/otherItems_Descrip_EditText"
-        android:layout_width="156dp"
+        android:layout_width="158dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="8dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/insert_a_description_if_you_want"
@@ -176,8 +166,7 @@
         app:layout_constraintBottom_toTopOf="@+id/save_Btn"
         app:layout_constraintEnd_toEndOf="@+id/otherItems_EditText"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/otherItems_EditText"
-        tools:targetApi="o" />
+        app:layout_constraintStart_toStartOf="@+id/otherItems_EditText" />
 
     <Button
         android:id="@+id/save_Btn"
