--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="eu.indiewalkabout.cleantheworld.InfoActivity">
+    tools:context="eu.indiewalkabout.cleantheworld.UI.InfoActivity">
 
     <ScrollView
         android:id="@+id/scrollView2"
