--- a/app/src/main/res/layout-v26/activity_insert.xml
+++ b/app/src/main/res/layout-v26/activity_insert.xml
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/plastic_Btn"
         app:layout_constraintVertical_bias="0.0" />
 
-    <EditText
+    <eu.indiewalkabout.cleantheworld.util.EditTextWithClear
         android:id="@+id/plasticItems_EditText"
         android:layout_width="168dp"
         android:layout_height="wrap_content"
@@ -92,7 +92,7 @@
         app:layout_constraintStart_toStartOf="@+id/plasticItem_Descrip_EditText"
         app:layout_constraintTop_toBottomOf="@+id/plasticItems_EditText" />
 
-    <EditText
+    <eu.indiewalkabout.cleantheworld.util.EditTextWithClear
         android:id="@+id/plasticItem_Descrip_EditText"
         android:layout_width="168dp"
         android:layout_height="wrap_content"
@@ -122,7 +122,7 @@
         app:layout_constraintStart_toStartOf="@+id/otherItems_EditText"
         app:layout_constraintTop_toBottomOf="@+id/other_Btn" />
 
-    <EditText
+    <eu.indiewalkabout.cleantheworld.util.EditTextWithClear
         android:id="@+id/otherItems_EditText"
         android:layout_width="159dp"
         android:layout_height="wrap_content"
@@ -152,7 +152,7 @@
         app:layout_constraintStart_toStartOf="@+id/otherItems_Descrip_EditText"
         app:layout_constraintTop_toBottomOf="@+id/otherItems_EditText" />
 
-    <EditText
+    <eu.indiewalkabout.cleantheworld.util.EditTextWithClear
         android:id="@+id/otherItems_Descrip_EditText"
         android:layout_width="158dp"
         android:layout_height="wrap_content"
