--- a/app/src/main/res/layout/activity_insert.xml
+++ b/app/src/main/res/layout/activity_insert.xml
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@+id/plastic_Btn"
         app:layout_constraintVertical_bias="0.0" />
 
-    <EditText
+    <eu.indiewalkabout.cleantheworld.util.EditTextWithClear
         android:id="@+id/plasticItems_EditText"
         android:layout_width="171dp"
         android:layout_height="wrap_content"
@@ -94,7 +94,7 @@
         app:layout_constraintTop_toBottomOf="@+id/plasticItems_EditText"
         app:layout_constraintVertical_bias="0.545" />
 
-    <EditText
+    <eu.indiewalkabout.cleantheworld.util.EditTextWithClear
         android:id="@+id/plasticItem_Descrip_EditText"
         android:layout_width="168dp"
         android:layout_height="wrap_content"
@@ -129,7 +129,7 @@
         app:layout_constraintStart_toStartOf="@+id/otherItems_EditText"
         app:layout_constraintTop_toBottomOf="@+id/other_Btn" />
 
-    <EditText
+    <eu.indiewalkabout.cleantheworld.util.EditTextWithClear
         android:id="@+id/otherItems_EditText"
         android:layout_width="159dp"
         android:layout_height="wrap_content"
@@ -162,7 +162,7 @@
         app:layout_constraintStart_toStartOf="@+id/otherItems_Descrip_EditText"
         app:layout_constraintTop_toBottomOf="@+id/otherItems_EditText" />
 
-    <EditText
+    <eu.indiewalkabout.cleantheworld.util.EditTextWithClear
         android:id="@+id/otherItems_Descrip_EditText"
         android:layout_width="156dp"
         android:layout_height="wrap_content"
